// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should match snapshot no padding 1`] = `
.c5 {
  width: 100%;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 12px;
  height: 12px;
}

.c1 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #D8385E;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(216,56,94,0.45);
}

.c1:active {
  background-color: rgba(216,56,94,0.75);
  color: #FFFFFF;
}

.c1:active svg {
  fill: #FFFFFF;
}

.c8 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c8:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c8:active svg {
  fill: #FFFFFF;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  background-color: #FFFFFF;
  padding: 4px 16px;
  min-height: 56px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  max-width: 48px;
  min-width: 48px;
  height: 48px;
}

.c2:active {
  background-color: transparent;
}

.c2:active svg {
  fill: #231B22;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):focus {
  box-shadow: none;
}

.c2 div {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

.c2 svg {
  fill: #231B22;
  margin: 0;
}

.c9 {
  background-color: transparent;
  box-shadow: none;
  max-width: 48px;
  min-width: 48px;
  height: 48px;
}

.c9:active {
  background-color: transparent;
}

.c9:active svg {
  fill: #231B22;
}

.c9:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c9:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c9:not([disabled]):focus {
  box-shadow: none;
}

.c9 div {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: transparent;
}

.c9 svg {
  fill: #231B22;
  margin: 0;
}

<div>
  <header
    class="c0"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
        display="flex"
        height="xxlarge"
        width="xxlarge"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="12"
          role="img"
          width="12"
        />
      </div>
    </button>
    <div
      class="c5"
    >
      <h1
        class="c6"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c7"
      display="flex"
    >
      <button
        class="c8 c9"
      >
        <div
          class="c3"
          display="flex"
          height="xxlarge"
          width="xxlarge"
        >
          <svg
            aria-hidden="true"
            class="c4"
            height="12"
            role="img"
            width="12"
          />
        </div>
      </button>
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with all components 1`] = `
.c5 {
  width: 100%;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 12px;
  height: 12px;
}

.c1 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #D8385E;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(216,56,94,0.45);
}

.c1:active {
  background-color: rgba(216,56,94,0.75);
  color: #FFFFFF;
}

.c1:active svg {
  fill: #FFFFFF;
}

.c8 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c8:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c8:active svg {
  fill: #FFFFFF;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  background-color: #FFFFFF;
  padding: 4px 16px;
  min-height: 56px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  max-width: 48px;
  min-width: 48px;
  height: 48px;
}

.c2:active {
  background-color: transparent;
}

.c2:active svg {
  fill: #231B22;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):focus {
  box-shadow: none;
}

.c2 div {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

.c2 svg {
  fill: #231B22;
  margin: 0;
}

.c9 {
  background-color: transparent;
  box-shadow: none;
  max-width: 48px;
  min-width: 48px;
  height: 48px;
}

.c9:active {
  background-color: transparent;
}

.c9:active svg {
  fill: #231B22;
}

.c9:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c9:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c9:not([disabled]):focus {
  box-shadow: none;
}

.c9 div {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: transparent;
}

.c9 svg {
  fill: #231B22;
  margin: 0;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 16px;
  }
}

<div>
  <header
    class="c0"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
        display="flex"
        height="xxlarge"
        width="xxlarge"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="12"
          role="img"
          width="12"
        />
      </div>
    </button>
    <div
      class="c5"
    >
      <h1
        class="c6"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c7"
      display="flex"
    >
      <button
        class="c8 c9"
      >
        <div
          class="c3"
          display="flex"
          height="xxlarge"
          width="xxlarge"
        >
          <svg
            aria-hidden="true"
            class="c4"
            height="12"
            role="img"
            width="12"
          />
        </div>
      </button>
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with back button 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 12px;
  height: 12px;
}

.c5 {
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #D8385E;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(216,56,94,0.45);
}

.c1:active {
  background-color: rgba(216,56,94,0.75);
  color: #FFFFFF;
}

.c1:active svg {
  fill: #FFFFFF;
}

.c0 {
  background-color: #FFFFFF;
  padding: 4px 16px;
  min-height: 56px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: 48px;
  height: 48px;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  max-width: 48px;
  min-width: 48px;
  height: 48px;
}

.c2:active {
  background-color: transparent;
}

.c2:active svg {
  fill: #231B22;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):focus {
  box-shadow: none;
}

.c2 div {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

.c2 svg {
  fill: #231B22;
  margin: 0;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 16px;
  }
}

<div>
  <header
    class="c0"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
        display="flex"
        height="xxlarge"
        width="xxlarge"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="12"
          role="img"
          width="12"
        />
      </div>
    </button>
    <div
      class="c5"
    />
    <div
      class="c6"
      display="flex"
    >
      <div
        class="c7"
      />
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with title 1`] = `
.c2 {
  width: 100%;
  text-align: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  background-color: #FFFFFF;
  padding: 4px 16px;
  min-height: 56px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 48px;
  height: 48px;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 16px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <h1
        class="c3"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c4"
      display="flex"
    >
      <div
        class="c1"
      />
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with title and back button 1`] = `
.c5 {
  width: 100%;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 12px;
  height: 12px;
}

.c1 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #D8385E;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(216,56,94,0.45);
}

.c1:active {
  background-color: rgba(216,56,94,0.75);
  color: #FFFFFF;
}

.c1:active svg {
  fill: #FFFFFF;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  background-color: #FFFFFF;
  padding: 4px 16px;
  min-height: 56px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: 48px;
  height: 48px;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  max-width: 48px;
  min-width: 48px;
  height: 48px;
}

.c2:active {
  background-color: transparent;
}

.c2:active svg {
  fill: #231B22;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):hover {
  background-color: transparent;
  box-shadow: none;
}

.c2:not([disabled]):focus {
  box-shadow: none;
}

.c2 div {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

.c2 svg {
  fill: #231B22;
  margin: 0;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 16px;
  }
}

<div>
  <header
    class="c0"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
        display="flex"
        height="xxlarge"
        width="xxlarge"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="12"
          role="img"
          width="12"
        />
      </div>
    </button>
    <div
      class="c5"
    >
      <h1
        class="c6"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c7"
      display="flex"
    >
      <div
        class="c8"
      />
    </div>
  </header>
</div>
`;

exports[`<Heading /> should override the background color 1`] = `
.c2 {
  width: 100%;
  text-align: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  background-color: #FFFFFF;
  background-color: #FFEEF2;
  padding: 4px 16px;
  min-height: 56px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 48px;
  height: 48px;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 16px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <h1
        class="c3"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c4"
      display="flex"
    >
      <div
        class="c1"
      />
    </div>
  </header>
</div>
`;
